--- a/public/assets/css/nppy.css
+++ b/public/assets/css/nppy.css
@@ -667,7 +667,7 @@ Fun Facts
     margin-bottom: 10px;
 }
 .facts-wrapper .timer {
-    display: block;
+    /*display: block;*/
     font-size: 55px;
     line-height: 70px;
     font-weight: 700;
@@ -677,6 +677,7 @@ Fun Facts
 .facts-wrapper .count-description {
     color: #8f8f8f;
     text-transform: uppercase;
+    font-size: 18px;
 }
 
 @media screen and (max-width: 991px) {
