:construction: Refactor CSS for header buttons

--- a/public/assets/css/overrides.css
+++ b/public/assets/css/overrides.css
@@ -3,9 +3,16 @@
     margin-top: -7px;
 }
 
-#patreon-logo {
-    height: 24px;
-    margin-right: 10px;
+#patreon {
+    height: 17px;
+    margin: -2px 4px 0 0;
+}
+
+#patreon-btn {
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+    font-weight: bold;
 }
 
 .best-solution-intro {
