--- a/public/assets/css/nppy.css
+++ b/public/assets/css/nppy.css
@@ -259,7 +259,7 @@ Hero Section
     #header-image-container {
         text-align: center !important;
     }
-    img {
+    #header-image {
         max-width: 100% !important;
 		display: block;
 		margin: 20px auto -50px;
@@ -653,21 +653,20 @@ Pricing Table
     box-shadow: 0 18px 38px 0 rgb(218, 218, 218), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 
-
-
 /*
 Fun Facts
 --------------------------------------------------*/
 .facts-wrapper {
 	padding-top: 130px;
 	padding-bottom: 130px;
+    overflow: hidden !important;
 }
 .facts-wrapper .counter-wrap i {
     font-size: 45px;
     margin-bottom: 10px;
 }
 .facts-wrapper .timer {
-    /*display: block;*/
+    display: block;
     font-size: 55px;
     line-height: 70px;
     font-weight: 700;
