--- a/public/assets/css/material-kit.css
+++ b/public/assets/css/material-kit.css
@@ -2764,10 +2764,10 @@ h2.title {
   display: none;
 }
 .carousel .left {
-  cursor: url("../img/arrow-left.png"), url("../img/arrow-left.cur"), default !important;
+  cursor: url("https://canvas-47a7.kxcdn.com/assets/img/arrow-left.png"), url("https://canvas-47a7.kxcdn.com/assets/img/arrow-left.cur"), default !important;
 }
 .carousel .right {
-  cursor: url("../img/arrow-right.png"), url("../img/arrow-right.cur"), default !important;
+  cursor: url("https://canvas-47a7.kxcdn.com/assets/img/arrow-right.png"), url("https://canvas-47a7.kxcdn.com/assets/img/arrow-right.cur"), default !important;
 }
 .carousel .carousel-indicators {
   bottom: 5px;
