--- a/public/assets/css/nppy.css
+++ b/public/assets/css/nppy.css
@@ -440,6 +440,47 @@ Featured-item
     background: #fff;
 }
 
+/*screenshot-carousel*/
+.screenshot-carousel .featured-item .desc h3 {
+    color: #fff;
+    text-transform: capitalize;
+    margin-bottom: 30px;
+}
+.screenshot-carousel .featured-item {
+    padding: 20px;
+}
+.screenshot-img {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    margin: 10px 10px 10px 0 !important;
+}
+.screenshot-carousel.owl-theme .owl-controls {
+    margin-top: 55px;
+}
+
+.screenshot-carousel.owl-theme .owl-dots .owl-dot span {
+    width: 13px;
+    height: 13px;
+    margin: 5px 5px;
+    background: rgba(0, 0, 0, 0.25);
+}
+
+.light-grey-bg .screenshot-carousel.owl-theme .owl-dots .owl-dot.active span,
+.light-grey-bg .screenshot-carousel.owl-theme .owl-dots .owl-dot:hover span {
+    background: #fff;
+}
+
+@media screen and (min-width: 1200px) {
+    #screenshots-container {
+        margin: 0 200px;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    #screenshots-container {
+        margin: 0 100px;
+    }
+}
+
 /*
 Mockup Presentation
 ------------------------------------------------------*/
