--- a/resources/sass/variables.scss
+++ b/resources/sass/variables.scss
@@ -1,7 +1,7 @@
 
 // Typography
 $font-family-sans-serif: "Nunito", sans-serif;
-$font-family-serif: "Libre Baskerville", serif;
+$font-family-serif: "Merriweather", serif;
 $fa-font-path: "../fonts" !default;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
