--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,7 +1,7 @@
 
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Nunito");
-@import url("https://fonts.googleapis.com/css?family=Libre+Baskerville");
+@import url("https://fonts.googleapis.com/css?family=Merriweather");
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/solid";
@@ -13,5 +13,35 @@
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
-// Globals
-@import "globals";
+.welcome {
+  font-family: $font-family-serif;
+  font-size: 45px;
+  span {
+    color: #9ba3aa;
+  }
+}
+
+.serif {
+  font-family: $font-family-serif;
+}
+
+.logo {
+  font-family: $font-family-serif;
+  font-size: 24px;
+  span {
+    color: #9ba3aa;
+  }
+}
+
+.content-title {
+  color: #444;
+  a {
+    color: #444;
+  }
+}
+
+.content-body {
+  color: #444;
+  font-size: 1.1rem;
+  line-height: 2;
+}
