--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css?family=Merriweather);
+@import url(https://fonts.googleapis.com/css?family=Nunito|Merriweather);
 
 /*!
  * Font Awesome Free 5.6.3 by @fontawesome - https://fontawesome.com
