--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Nunito|Merriweather");
+@import url("https://fonts.googleapis.com/css?family=Nunito|Merriweather:100,300,700,900");
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
@@ -47,7 +47,8 @@ a {
 }
 
 .content-body {
-  color: $dark-grey;
+  font-weight: 300;
+  color: hsla(0,0%,0%,0.9);
   font-size: 1.1rem;
   line-height: 2;
 }
