added the comparison slider for light/dark modes

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,9 @@
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
+// BeerSlider
+@import "~beerslider/dist/BeerSlider.css";
+
 body {
   color: rgba(0, 0, 0, 0.8);
 }
