updated the features

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,6 +20,10 @@ $text-muted: $gray-500;
 
 $display4-size: 45px;
 
+.fill-secondary {
+    fill: $gray-600;
+}
+
 .text-lg {
     font-size: 1.1rem;
 }
