--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,6 +16,9 @@ $red: #cc5454;
 $font-family-sans-serif: "Karla", sans-serif;
 $font-family-serif: "Merriweather", serif;
 
+$box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+;
+
 $text-muted: $gray-500;
 
 $display4-size: 45px;
