--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,6 +21,8 @@ $box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.0
 $border-radius: .5rem;
 $border-radius-sm: .4rem;
 
+$badge-border-radius: .25rem;
+
 $text-muted: $gray-500;
 
 $link-color: $gray-500;
