updates the favicon

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,6 +24,10 @@ $blue-500: rgba(158, 213, 237, 0.6);
 $font-family-sans-serif: "Nunito Sans", sans-serif;
 $font-family-serif: "Merriweather", serif;
 
+$font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-bold: 700;
+
 $body-color: $gray-900;
 
 $box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
