--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap|Merriweather&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Karla&display=swap|Merriweather&display=swap');
 
 $white: #fff;
 $gray-100: #f7fafc;
@@ -21,7 +21,7 @@ $green-500: rgba(3, 168, 124, .6);
 $blue: rgb(84, 175, 204);
 $blue-500: rgba(158, 213, 237, 0.6);
 
-$font-family-sans-serif: "Nunito Sans", sans-serif;
+$font-family-sans-serif: "Karla", sans-serif;
 $font-family-serif: "Merriweather", serif;
 
 $font-weight-light: 300;
